fixed overflow problem

--- a/Assignnments/ShovonSikder_Async_JS_ASGT_3_D_23.06.2022/css/style.css
+++ b/Assignnments/ShovonSikder_Async_JS_ASGT_3_D_23.06.2022/css/style.css
@@ -70,8 +70,8 @@ body {
     background-color: aliceblue;
     margin-top: 15px;
     padding: 5px;
-    text-align: justify;
     box-shadow: 1px 1px 5px 0px;
+    overflow-wrap: break-word;
 
 
 }
